# 10k

./: LICENSE.md  README.md  Sympy Neural Networks.ipynb  pyproject.toml
notebooks/: Sympy Neural Networks.ipynb
